<resources>
    <string name="app_name">Ktu-Forum</string>
    <string name="username">UserName</string>
    <string name="password">password</string>
    <string name="login">LOGIN</string>
    <string name="signup">SIGNUP</string>
    <string name="background_image">Background Image</string>
    <string name="ask_answer">Ask/Answer</string>
    <string name="view_questions">View-Questions</string>
    <string name="profile">Profile</string>
    <string name="background">Background</string>
    <string name="pr">Private</string>
    <string name="pu">Public</string>
    <string name="points">Points</string>
    <string name="_0">0</string>
    <string name="rank">Rank</string>
    <string name="top_10">Top 10</string>
    <string name="zero">0</string>
    <string name="available_teachers">Available Teachers</string>
    <string name="loading">Loading…</string>
    <string name="question">Question:</string>
    <string name="ask_your_question">ask your Question</string>
    <string name="image_button_send">Image Button Send</string>
    <string name="teacher_id">Teacher_id</string>
    <string name="teacher_name">Teacher_name</string>
    <string name="userid_qn">UserID-qn</string>
    <string name="userid_answer">UserID-answer</string>
    <string name="answer">answer</string>
    <string name="ask_questions">Ask Questions</string>
    <string name="your_questions">Your Questions</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_ask">Ask</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="ask_private">Ask Private</string>
    <string name="ask_public">Ask Public</string>
    <string name="logo">LOGO</string>
    <string name="help">Help</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_check_updates">Check For Update</string>
    <string name="name">Name</string>
    <string name="point">Points :</string>
    <string name="points1">Points</string>
    <string name="rank1">Rank :</string>
    <string name="search">Search</string>
    <string name="no_questions_asked_to_teachers">No Questions Asked To Teachers</string>
    <string name="logout">LogOut</string>
    <string name="userid">UserID</string>
    <string name="pass">Password</string>

</resources>
