<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">



    <item android:title="@string/view_questions"
        android:color="@android:color/holo_orange_light"
        android:icon="@mipmap/ic_book_black_24dp"
        android:id="@+id/view"
        />
    <item android:title="@string/ask_private"
    android:color="@android:color/holo_green_light"
    android:icon="@mipmap/ic_library_books_black_18dp"
    android:id="@+id/ask_private"
    />
    <item android:title="@string/ask_public"
        android:color="@android:color/background_light"
        android:icon="@mipmap/ic_info_black_18dp"
        android:id="@+id/ask_public"
        />
    <item android:title="@string/your_questions"
        android:color="@android:color/holo_red_light"
        android:icon="@drawable/ic_bookmark"
        android:id="@+id/bookmark"
        />
    <item android:title="@string/profile"
        android:color="@android:color/holo_blue_light"
        android:icon="@mipmap/ic_perm_identity_black_18dp"
        android:id="@+id/profile"
        />
</menu>