<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <!-- Search / will display always -->
    <item
        android:id="@+id/search_questions"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always" />

    <!-- Ask Private -->
    <item android:id="@+id/action_ask_private"
        android:icon="@drawable/askprivate"
        android:title="@string/ask_private"
        app:showAsAction="never" />
    <!-- Ask Public -->
    <item android:id="@+id/action_ask_public"
        android:icon="@drawable/askpublic"
        android:title="@string/ask_public"
        app:showAsAction="never" />

    <!-- Help -->
    <item android:id="@+id/action_help"
        android:icon="@drawable/ic_help_black_24dp"
        android:title="@string/help"
        app:showAsAction="never" />

    <!-- Check updates -->
    <item android:id="@+id/action_check_updates"
        android:icon="@drawable/ic_cached_black_24dp"
        android:title="@string/action_check_updates"
        app:showAsAction="never" />
</menu>