<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginRight="5dp"
    android:layout_marginLeft="5dp"
    app:cardCornerRadius="5dp"
    android:layout_marginBottom="2dp"
    android:orientation="vertical"
    >


    <RelativeLayout
        android:id="@+id/layout_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/ic_perm_identity_black_18dp"
            android:contentDescription="@string/profile" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:orientation="vertical"
            android:layout_marginStart="25dp">

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/p"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/point" />

                <TextView
                    android:id="@+id/points"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/points1" />

                <TextView
                    android:id="@+id/r"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/rank1" />

                <TextView
                    android:id="@+id/rank"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/rank" />
            </LinearLayout>


        </LinearLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>



