<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/bg"
        android:contentDescription="@string/background_image" />

    <LinearLayout
        android:padding="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="200dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:alpha="0.7"
        android:background="@android:color/white"
        android:orientation="vertical">
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textColor="@color/colorPrimary"
    android:text="@string/question"/>
        <EditText
            android:id="@+id/qn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ask_your_question"
            android:inputType="textMultiLine"
            android:textColor="@android:color/primary_text_dark" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="end">
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/send"
        android:background="@android:drawable/ic_menu_send"
        android:contentDescription="@string/image_button_send" />
</LinearLayout>

    </LinearLayout>
</RelativeLayout>