<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardCornerRadius="10dp"
    android:background="@android:color/holo_orange_light"
    android:orientation="vertical"
    app:cardElevation="10dp">

    <RelativeLayout
        android:padding="5dp"
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/ic_perm_identity_black_18dp"
            android:contentDescription="@string/background_image" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:orientation="vertical"
            android:layout_marginStart="25dp">

            <TextView
                android:id="@+id/question_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userid_qn"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_questions"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/answer_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/userid_answer"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="14sp"
                tools:ignore="RtlHardcoded" />

            <MultiAutoCompleteTextView
                android:id="@+id/answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/answer"
                android:layout_gravity="fill"
                android:textSize="15sp"
                tools:ignore="LabelFor,RtlHardcoded" />

        </LinearLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>