<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:scaleType="centerCrop"
        android:contentDescription="@string/background_image" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:text="@string/available_teachers"
    android:textSize="18sp"
    />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loading"
        android:layout_gravity="center"
        android:background="@android:color/primary_text_dark"
        android:alpha="0.5"
        android:text="@string/loading"
        android:textSize="12sp"
        />
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:id="@+id/recy"
        android:layout_height="wrap_content" />

</LinearLayout>

</RelativeLayout>