<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginRight="5dp"
    android:layout_marginLeft="5dp"
    app:cardCornerRadius="5dp"
    android:layout_marginBottom="2dp"
    android:background="@android:color/holo_orange_light"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:padding="5dp"
        android:id="@+id/layout_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/ic_perm_identity_black_18dp"
            android:contentDescription="@string/profile" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:orientation="vertical"
            android:layout_marginStart="25dp">

            <TextView
                android:id="@+id/t_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/teacher_id"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/t_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/teacher_name"
                android:textSize="15sp" />

        </LinearLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>